--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring
 spring.datasource.username=plasante
 spring.datasource.password=321eRRe!p
 spring.jpa.database=mysql
+spring.jpa.show-sql=true
