--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=plasante
 spring.datasource.password=321eRRe!p
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
+
+spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
