--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.database=mysql
 spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
+
+#logging.level.root=debug
