--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
 
 #logging.level.root=debug
+#logging.level.com.uniksoft.controller=trace
+logging.level.com.uniksoft.controller.AddressController=trace
