--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
 
 #logging.level.root=debug
 #logging.level.com.uniksoft.controller=trace
-logging.level.com.uniksoft.controller.AddressController=trace
+#logging.level.com.uniksoft.controller.AddressController=trace
