--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
 #logging.level.root=debug
 #logging.level.com.uniksoft.controller=trace
 #logging.level.com.uniksoft.controller.AddressController=trace
+
+#logging.file.name=app.log
+
+#logging.file.max-size=100M
+
